# ck3oop

./: .gitignore  CHANGELOG.md  Cargo.toml  justfile  package-lock.json  package.json
.github/: .gitignore  .release-please-manifest.json  release-please-config.json
.github/workflows/: npm-publish-package.yaml  release-please.yaml  rust-publish-crate.yaml  rust-test.yaml  tauri-publish-artifacts.yaml  ui-test-e2e.yaml
ck3oop-core-js/: CHANGELOG.md  package.json
ck3oop-core-rs/: CHANGELOG.md
ck3oop-core-rs/src/: lib.rs  workspace.rs
ck3oop-ui/: CHANGELOG.md  justfile  package.json  vars.just
ck3oop-ui/src/: main.ts
ck3oop-ui/src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
ck3oop-ui/src-tauri/capabilities/: default.json
ck3oop-ui/src/components/: Greet.vue
tests-e2e/: justfile  package.json  tsconfig.json
tests-e2e/src/: main.ts
tools/: justfile  release-please.just
tools/patches/release-please/: fix__use_strategies_for_rust_workspace_plugin.patch
